connect/tests/macros/quint_run/fail/missing_spec.rs
use quint_connect::*;

struct TestDriver;

impl Driver for TestDriver {}

#[quint_run]
fn test_simple_run() -> impl Driver {
    TestDriver
}

fn main() {}
